--- a/Riskvalve/Views/Inspection/PrintInspection.cshtml
+++ b/Riskvalve/Views/Inspection/PrintInspection.cshtml
@@ -18,7 +18,7 @@
                 <td colspan="10" class="heading" style="width: 100%; background-color: #1f487c !important;">Valve
                     Inspection</td>
                 <td colspan="2" rowspan="4" class="no-padding text-center">
-                    <img class="logo" src="~/lib/images/logo-square.jpg">
+                    <img class="logo" src="~/lib/images/logo-square-new.jpg">
                 </td>
             </tr>
             <tr>
