--- a/Riskvalve/Views/Assessment/PrintAssessment.cshtml
+++ b/Riskvalve/Views/Assessment/PrintAssessment.cshtml
@@ -145,7 +145,7 @@
                                     }
                                     @foreach (var image in assessment.MaintenanceHistory[i].Maintenance.MaintenanceFiles) {
                                         <td style="border: none; width: 20%;">
-                                            <img src="/@image.FilePath" style="width: 100%;"/>
+                                            <img src="https://vims.twi-dev.net/@image.FilePath" style="width: 100%;"/>
                                         </td>
                                         ctr_maintenance_img+=1;
                                         if(ctr_maintenance_img >=5){
@@ -160,8 +160,6 @@
                 }
             }
             <!-- Forth section -->
-            <tr>
-            </tr>
             <tr>
                 <td colspan="12" class="table-section" style="width: 100%; background-color: #1f487c !important; color: white !important; text-align: center;">Inspection History</td>
             </tr>
@@ -206,7 +204,7 @@
                                     }
                                     @foreach (var image in assessment.InspectionHistory[i].Inspection.InspectionFiles) {
                                         <td style="border: none; width: 20%;">
-                                            <img src="/@image.FilePath" style="width: 100%;"/>
+                                            <img src="https://vims.twi-dev.net/@image.FilePath" style="width: 100%;"/>
                                         </td>
                                         ctr_inspection_img+=1;
                                         if(ctr_inspection_img >=5){
@@ -234,8 +232,6 @@
                 }
             }
             <!-- Fifth section -->
-            <tr>
-            </tr>
             <tr>
                 <td colspan="12" class="table-section" style="width: 100%; background-color: #1f487c !important; color: white !important; text-align: center;">Valve Data</td>
             </tr>
