--- a/Riskvalve/Views/AssetRegister/Asset.cshtml
+++ b/Riskvalve/Views/AssetRegister/Asset.cshtml
@@ -44,11 +44,32 @@
                             <th>Platform</th>
                             <th>Valve Type</th>
                             <th>Size (inch)</th>
-                            <th>Rating</th>
-                            <th>PID Number</th>
+                            <th class="noshow">Equipment Name</th>
+                            <th class="noshow">Status</th>
+                            <th class="noshow">Actuation</th>
+                            <th>Class Rating</th>
                             <th>Parent Equipment No</th>
                             <th>Parent Equipment Description</th>
+                            <th class="noshow">Installation Date</th>
+                            <th>PID Number</th>
+                            <th class="noshow">Cost of Replacement & Repair (USD)</th>
+                            <th class="noshow">Usage Type</th>
+                            <th class="noshow">Manufacturer</th>
+                            <th class="noshow">Body Model</th>
+                            <th class="noshow">Body Material</th>
+                            <th class="noshow">End Connection</th>
+                            <th class="noshow">Serial No</th>
+                            <th class="noshow">Manual Override</th>
+                            <th class="noshow">Actuator Mfg</th>
+                            <th class="noshow">Actuator Serial No.</th>
+                            <th class="noshow">Actuator Type/Model</th>
+                            <th class="noshow">Actuator Power</th>
+                            <th class="noshow">Operating Temperature (F)</th>
+                            <th class="noshow">Operating Pressure (Psig)</th>
+                            <th class="noshow">Flow Rate (m3/hr)</th>
                             <th>Service Fluid</th>
+                            <th class="noshow">Fluid Phase</th>
+                            <th class="noshow">Toxic or Flamable Fluid</th>
                             <th class="notexport"></th>
                         </tr>
                     </thead>
