push after pentest

--- a/Riskvalve/Views/Inspection/Index.cshtml
+++ b/Riskvalve/Views/Inspection/Index.cshtml
@@ -263,7 +263,7 @@
                                                         <label for="field-inspection-image">Inspection Image</label>
                                                         <div class="gallery-input">
                                                             <input type="file" class="form-control image-gallery-upload"
-                                                                id="field-inspection-image" multiple>
+                                                                id="field-inspection-image" accept="image/*, .xls, .xlsx" multiple>
                                                             <div class="preview-image-gallery">
                                                                 <label class="add-image" for="field-inspection-image"><i
                                                                         class="fa-solid fa-file-circle-plus"></i></label>
