--- a/Riskvalve/Views/Maintenance/Index.cshtml
+++ b/Riskvalve/Views/Maintenance/Index.cshtml
@@ -174,7 +174,7 @@
                                                 <label for="field-maintenance-image">Maintenance Image</label>
                                                 <div class="gallery-input">
                                                     <input type="file" class="form-control image-gallery-upload"
-                                                        id="field-maintenance-image" multiple>
+                                                        id="field-maintenance-image" accept="image/*, .xls, .xlsx" multiple>
                                                     <div class="preview-image-gallery">
                                                         <label class="add-image" for="field-maintenance-image"><i
                                                                 class="fa-solid fa-file-circle-plus"></i></label>
