--- a/Riskvalve/Views/Login/Index.cshtml
+++ b/Riskvalve/Views/Login/Index.cshtml
@@ -62,5 +62,6 @@
     <input type="hidden" id="requestVerificationToken" value="@tokens.RequestToken">
 </body>
 @section Scripts {
+    <script src="~/js/recaptcha.api.js" async defer></script>
     <script src="~/js/login/index.js" asp-append-version="true"></script>
 }
